// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rating /> renders basic rating correctly 1`] = `
<span
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={0}
  className="talixo-rating"
  role="slider"
>
  <span
    className="talixo-rating__outer"
  >
    <Icon
      key="0"
      name="star"
    />
    <Icon
      key="1"
      name="star"
    />
    <Icon
      key="2"
      name="star"
    />
    <Icon
      key="3"
      name="star"
    />
    <Icon
      key="4"
      name="star"
    />
  </span>
  <span
    className="talixo-rating__inner"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    <Icon
      key="0"
      name="star"
    />
    <Icon
      key="1"
      name="star"
    />
    <Icon
      key="2"
      name="star"
    />
    <Icon
      key="3"
      name="star"
    />
    <Icon
      key="4"
      name="star"
    />
  </span>
</span>
`;

exports[`<Rating /> should render basic rating without placeholders 1`] = `
<span
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={300}
  className="talixo-rating"
  role="slider"
>
  <span
    className="talixo-rating__outer talixo-rating__outer--hidden"
  >
    <Icon
      key="0"
      name="star"
    />
    <Icon
      key="1"
      name="star"
    />
    <Icon
      key="2"
      name="star"
    />
    <Icon
      key="3"
      name="star"
    />
    <Icon
      key="4"
      name="star"
    />
  </span>
  <span
    className="talixo-rating__inner"
    style={
      Object {
        "width": "300%",
      }
    }
  >
    <Icon
      key="0"
      name="star"
    />
    <Icon
      key="1"
      name="star"
    />
    <Icon
      key="2"
      name="star"
    />
    <Icon
      key="3"
      name="star"
    />
    <Icon
      key="4"
      name="star"
    />
  </span>
</span>
`;
